--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -134,6 +134,16 @@
 		font-size: 6em;
 	}
 	.top {
-		height: 800px;
+		height: 750px;
+		padding: 0px;
+	}
+}
+@media screen and (max-width: 1024px){
+	#header h1 {
+		font-size: 6em;
+	}
+	.top {
+		height: 750px;
+		padding: 0px;
 	}
 }
