--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -15,12 +15,12 @@
 	margin-top: 130px;
 }
 #header p {
-	font-family: "Nunito", sans-serif;
+	font-family: Comfortaa, sans-serif;
 	font-style: italic;
 	text-indent: 180px;
 }
 #main {
-	font-family: "Nunito", sans-serif;
+	font-family: Comfortaa, sans-serif;
 }
 .top {
 	height: 700px;
