updates for portfolio v2

--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -1,151 +1,33 @@
-#header {
-	height: 450px;
-	text-align: center;
-	background-color: #b3c2bf;
+html {
+	font-family: "Roboto", sans-serif;
+    font-weight: 200;
 }
-#header h1 {
-	font-size: 6em;
-	font-family: Lobster;
-	/*color: #e9ece5;*/
-	color: red;
-	text-shadow: 4px 4px grey;
-	margin-top: 80px;
+.parallax img {
+    opacity: 0.6;
 }
-#header img {
-	margin-top: 130px;
+nav, .page-footer {
+    background-color: #607d8b;
 }
-#header p {
-	font-family: Comfortaa, sans-serif;
-	font-style: italic;
-	text-indent: 180px;
+.card {
+    margin-bottom: 70px;
 }
-#main {
-	font-family: Comfortaa, sans-serif;
+.card .card-image .card-title {
+	color: #F19F4D;
 }
-.top {
-	height: 700px;
-	display: table;
+.scrumy_imgs {
+    margin-top: 30px;
 }
-.bottom {
-	height: 100%;
-	display: table;
-	padding: 50px;
+.text_center {
+    text-align: center;
 }
-#about-me, #toolbox, #connect, #myPortfolio {
-	background-color: #3b3a36;
-	border: 1px dashed white;
+.footer_img {
+    margin-left: 20px;
+    margin-right: 20px;
 }
-.top p {
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center;
-	padding: 10px;
-}
-.bottom p {
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center;
-	font-size: 3em;
-}
-#main {
-	color: #c0dfd9;
-}
-.circular--landscape {
-  display: inline-block;
-  position: relative;
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-  border-radius: 50%;
-  border: 6px solid white;
-}
-.circular--landscape img {
-  width: auto;
-  height: 100%;
-}
-.aboutToggle, .toolboxToggle, .connectToggle, .portfolioToggle {
-	/*cursor: pointer;*/
-}
-.portfolio-back {
-	text-align: center;
-	padding-top: 50px;
-}
-.portfolio-desc {
-	padding: 60px;
-}
-.portfolio-desc p {
-	font-size: 1em;
-	display: block;
-	text-align: center;
-}
-.portfolio-desc h3 {
-	font-size: 2em;
-	display: block;
-	text-align: center;
-}
-.portfolio-desc img {
-	margin-right: auto;
-	margin-left: auto;
-}
-.portfolio-label {
-	font-size: 1em;
-}
-.frontside {
-	font-size: 3em;
-}
-.backside {
-	font-size: 1.1em;
-/*	letter-spacing: 3px;
-	word-spacing: 6px;*/
-	line-height: 30px;
-}
-.connectToggle a {
-	display: block;
-	margin: 15px;
-}
-.plussign {
-	cursor: pointer;
-}
-.backarrow {
-	display: block;
-	text-align: center;
-	cursor: pointer;
-}
-#footer {
-	text-align: center;
-	padding: 50px;
-}
-@media screen and (max-width: 780px){
-	#header h1 {
-		font-size: 5em;
-		text-shadow: 3px 3px grey;
-	}
-	#header p {
-		font-size: 0.8em;
-		text-indent: 70px;
-	}
-	#header img {
-		margin-top: 80px;
-	}
-	.portfolio-desc {
-		padding: 20px;
-	}
-}
-@media screen and (max-width: 1024px) and (orientation: landscape){
-	#header h1 {
-		font-size: 6em;
-	}
-	.top {
-		height: 850px;
-		padding: 0px;
-	}
-}
-@media screen and (max-width: 1024px){
-	#header h1 {
-		font-size: 6em;
-	}
-	.top {
-		height: 800px;
-		padding: 0px;
-	}
+#initials {
+    font-weight: bold;
+    color: #F19F4D;
+    border: 2px solid white;
+    border-radius: 25px;
+    padding: 7px;
 }
